Add xrd_ prefix in preview API; fix cost units typo
