# core/src/main/java/com/radixdlt/api/core/routes/transaction/TransactionPreviewHandler.java
@@ -146,11 +146,11 @@ public final class TransactionPreviewHandler
               new FeeSummary()
                   .loanFullyRepaid(fee.loanFullyRepaid())
                   .costUnitLimit(fee.costUnitLimit().toString())
-                  .costUnitConsumed(fee.costUnitsConsumed().toString())
+                  .costUnitsConsumed(fee.costUnitsConsumed().toString())
                   .costUnitPrice(fee.costUnitPrice().toString())
                   .tipPercentage(fee.tipPercentage().toString())
-                  .burned(fee.burned().toString())
-                  .tipped(fee.tipped().toString()))
+                  .xrdBurned(fee.burned().toString())
+                  .xrdTipped(fee.tipped().toString()))
           .logs(apiLogs)
           .newPackageAddresses(
               previewResult.newPackageAddresses().stream()
